[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psdist"
version = "0.0.2"
authors = [
  { name="Austin Hoover", email="ahoover1218@gmail.com" },
]
description = "Analysis/visualization of phase space distributions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.7.0",
    "ipywidgets>=8.0.2",
    "matplotlib>=3.6.2",
    "numpy>=1.21.5",
    "proplot>=0.9.5",
    "psdist>=0.0.1",
    "scipy>=1.9.3",
    "seaborn>=0.12.1",
    "tqdm>=4.64.1",
]

[project.urls]
homepage = "https://github.com/austin-hoover/psdist"